[package]
name = "combin-iterator"
autho
version = "0.0.1"
edition = "2021"
licence = "MIT OR Apache-2.0"
description = "Some usefull facilities for combining iterators"
repository = "https://github.com/S3lios/rust-combin-iterator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
