[package]
name = "combin-iterator"
authors = ["S3lios"]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Some usefull facilities for combining iterators"
repository = "https://github.com/S3lios/rust-combin-iterator"
keywords  = ["iterator", "iteration", "sequencial", "tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
